# workout-tracker

./: .gitignore  DECISIONS.md  INTERVIEW_NOTES.md  README.md  docker-compose.yml
backend/: .env.example  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 16e953995612_add_sex_to_users_add_bodyweight_logs_.py  77614ebc203f_add_unique_constraint_on_bodyweight_.py  a2d94014f602_add_created_by_user_id_to_exercises_for_.py  ae9a49e90815_create_users_exercises_workout_sessions_.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: analytics.py  auth.py  bodyweight.py  exercises.py  health.py  workouts.py
backend/app/core/: security.py
backend/app/models/: __init__.py  bodyweight.py  exercise.py  user.py  workout.py
backend/app/schemas/: analytics.py  bodyweight.py  exercise.py  user.py  workout.py
backend/app/services/: analytics.py
backend/scripts/: seed_exercises.py
cpp_engine/: CMakeLists.txt
cpp_engine/include/: one_rep_max.hpp  plateau.hpp  strength_standard.hpp
cpp_engine/src/: bindings.cpp  one_rep_max.cpp  plateau.cpp  strength_standard.cpp
frontend/: index.html  package-lock.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: analytics.ts  auth.ts  bodyweight.ts  client.ts  exercises.ts  types.ts  workouts.ts
frontend/src/components/: BodyweightWidget.tsx  NavBar.tsx  ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: DashboardPage.tsx  LogWorkoutPage.tsx  LoginPage.tsx  ProgressPage.tsx  RegisterPage.tsx  SessionDetailPage.tsx
